fullSandbox11072023/force-app/main/default/objects/Territory_User__c/Territory_User__c.object-meta.xml
<CustomObject>
    <label>Territory User</label>
    <nameField>
        <displayFormat>TU-{0000000}</displayFormat>
        <label>Territory User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>