fullSandbox11072023/force-app/main/default/objects/Territory_User__c/fields/Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager__c</fullName>
    <formula>User__c== Territory_Master__r.Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Manager</label>
    <type>Checkbox</type>
</CustomField>