fullSandbox11072023/force-app/main/default/objects/Territory_User__c/fields/Quota_Owner__c.field-meta.xml
<CustomField>
    <fullName>Quota_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Person that owns the Quota for that territory.</inlineHelpText>
    <label>Quota Owner</label>
    <type>Checkbox</type>
</CustomField>