fullSandbox11072023/force-app/main/default/objects/Territory_User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep</fullName>
                <default>true</default>
                <label>Sales Rep</label>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>Sales VP</fullName>
            </value>
            <value>
                <fullName>Service Rep</fullName>
            </value>
            <value>
                <fullName>Clinical Specialists</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>