fullSandbox11072023/force-app/main/default/objects/Territory_User__c/fields/Territory_Master__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master__c</fullName>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Territory Users</relationshipLabel>
    <relationshipName>Territory_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>