fullSandbox11072023/force-app/main/default/objects/Territory_User__c/fields/User_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Full_Name__c</fullName>
    <formula>User__r.FirstName &amp; &quot; &quot; &amp; User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Full Name</label>
    <type>Text</type>
</CustomField>