fullSandbox11072023/force-app/main/default/objects/Territory_User__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <formula>User__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Role</label>
    <type>Text</type>
</CustomField>