fullSandbox11072023/force-app/main/default/objects/Territory_User__c/listViews/All_EMS.listView-meta.xml
<ListView>
    <fullName>All_EMS</fullName>
    <columns>NAME</columns>
    <columns>Territory_Master__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>EMS</value>
    </filters>
    <label>All EMS</label>
    <language>en_US</language>
</ListView>