fullSandbox11072023/force-app/main/default/objects/Territory_User__c/listViews/All_Name.listView-meta.xml
<ListView>
    <fullName>All_Name</fullName>
    <columns>NAME</columns>
    <columns>Territory_Master__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Name</label>
    <language>en_US</language>
</ListView>